# module-2

./: .dockerignore  .env.example  .gitignore  Dockerfile  ai_ctx.md  docker-compose.yml  module-2-api-contract.md  pyproject.toml  待确认清单.html  构造规则确认-详细版.html
app/: boards.py  config.py  cutting.py  db.py  engine.py  errors.py  formula.py  gate.py  ids.py  intake.py  main.py  responses.py  routes.py  rules.py  schemas.py  service.py  store.py
app/rules_data/: .gitkeep  board_config.yaml  cabinets.yaml
app/static/: construction_form.html  demo.html  test_console.html
contracts/: approved-cabinet-order-package.schema.json  contract_version.txt  production-engineering-package.schema.json
scripts/: export_contracts.py
tests/: conftest.py  test_batch.py  test_catalog.py  test_cutting.py  test_e2e.py  test_engine.py  test_feasibility.py  test_form.py  test_formula.py  test_gate.py  test_health.py  test_intake.py  test_objective.py  test_offcut.py  test_stages.py  test_stock.py  test_types.py
tests/fixtures/: catalog_sample.json
